--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,36 +1,47 @@
 {{{customstyle}}}
 <div class="container">
 
-    <div class="bg-light container ms-3">
+    {{#if formattedProducts.length}}
+        <div class="bg-light container ms-3">
 
-        <h1 class="fw-500 fs-2 p-4">Todos nuestros productos</h1>
-    </div>
-    <div class="bg-light p-5 rounded-lg m-3 container table-responsive">
-        <table class="table table-hover">
-            <tr class="">
-                <th class="fs-4">
-                    Producto
-                </th>
-                <th class="fs-4">
-                    Precio
-                </th>
-                <th class="fs-4">
-                    Imagen
-                </th>
-            </tr>
-            {{#each formattedProducts}}
-                <tr>
-                    <td>
-                        {{this.title}}
-                    </td>
-                    <td>
-                        {{this.price}}
-                    </td>
-                    <td>
-                        <img src={{this.thumbnail}} alt={{this.id}} />
-                    </td>
+            <h1 class="fw-500 fs-2 p-4">Todos nuestros productos</h1>
+        </div>
+        <div class="bg-light p-5 rounded-lg m-3 container table-responsive">
+            <table class="table table-hover">
+                <tr class="">
+                    <th class="fs-4">
+                        Producto
+                    </th>
+                    <th class="fs-4">
+                        Precio
+                    </th>
+                    <th class="fs-4">
+                        Imagen
+                    </th>
                 </tr>
-            {{/each}}
-        </table>
-    </div>
+                {{#each formattedProducts}}
+                    <tr>
+                        <td>
+                            {{this.title}}
+                        </td>
+                        <td>
+                            {{this.price}}
+                        </td>
+                        <td>
+                            <img src={{this.thumbnail}} alt={{this.id}} />
+                        </td>
+                    </tr>
+                {{/each}}
+            </table>
+        </div>
+    {{else}}
+        <div
+            class="container ms-3 alert-warning d-flex justify-content-center mt-5"
+        >
+
+            <h1 class="fw-500 fs-2 p-4">No hay productos disponibles</h1>
+        </div>
+
+    {{/if}}
+
 </div>
