(Feature) - Se incorporo un boton en la vista de todos los productos para volver al home, de manera de cumplir con la consigna de que haya un botÃon en el home para ir a la vista de todos los productos y viceversa | Se replico la funcionalidad en los 3 motores de plantillas

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,5 +4,10 @@ body .accordion .accordion-item .accordion-collapse .accordion-body .container f
 body .accordion .accordion-item .accordion-collapse .accordion-body .container form .mb-3 .small {
   opacity: 0.5;
 }
+body .btn-container {
+  position: fixed;
+  bottom: 3em;
+  right: 2em;
+}
 
 /*# sourceMappingURL=styles.css.map */
