--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -19,4 +19,9 @@ body {
             }
         }
     }
+    .btn-container {
+        position: fixed;
+        bottom: 3em;
+        right: 2em;
+    }
 }
