--- a/views/ejs/index.ejs
+++ b/views/ejs/index.ejs
@@ -10,9 +10,13 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="../css/styles.css" />
         <title>Products</title>
     </head>
     <body>
+        <div class="btn-container">
+            <a value="Atrás" class="btn btn-primary" href="../"> Home -> </a>
+        </div>
         <div class="container">
             <% if(allProducts.length > 0){ %>
             <div class="bg-light container ms-3">
