--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,4 +1,8 @@
 {{{customstyle}}}
+{{{customStyleCss}}}
+<div class="btn-container">
+    <a value="Atrás" class="btn btn-primary" href="../"> Home -> </a>
+</div>
 <div class="container">
 
     {{#if formattedProducts.length}}
