--- a/views/pug/main.pug
+++ b/views/pug/main.pug
@@ -2,6 +2,8 @@
 extends ./layout
 
 block main
+    div(class="btn-container")
+        a( value="Atrás" class="btn btn-primary" href="../") Home ->
     div(class="container")
         if formattedProducts.length > 0
             div(class="bg-light container ms-3")
